--- a/data_config.yaml
+++ b/data_config.yaml
@@ -72,3 +72,5 @@ sections:
             type: date
           - id: location
             type: string
+          - id: comments
+            type: comment
