able to handle multiple files with fild IDs

--- a/data_config.yaml
+++ b/data_config.yaml
@@ -45,6 +45,9 @@ sections:
             type: string
           - id: url
             type: url
+      - id: social files
+        type: file
+        multiple: true
   
   - id: addresses
     name: Addresses
