update notes, only able to add multiples of components in edit mode, comments not working?

--- a/data_config.yaml
+++ b/data_config.yaml
@@ -18,9 +18,12 @@ sections:
       - id: email
         type: email
         multiple: true
-      - id: personal_files
-        type: file
+      - id: commentated_files
+        type: comment
         multiple: true
+        components:
+          - id: attatched_file
+            type: file
 
 
   - id: social
