can fully handle multiples of components from data_config.yaml

--- a/data_config.yaml
+++ b/data_config.yaml
@@ -46,10 +46,13 @@ sections:
         type: url
         multiple: true
         components:
-          - id: handle
-            type: string
           - id: url
             type: url
+          - id: handle
+            type: string
+          - id: email
+            type: email
+            multiple: true
       - id: social files
         type: file
         multiple: true
