handle file uploads, but not as components, components only handled for urls

--- a/data_config.yaml
+++ b/data_config.yaml
@@ -12,25 +12,35 @@ sections:
             type: string
           - id: last_name
             type: string
+      - id: summary
+        type: comment
+        multiple: true
+      - id: basic_file
+        type: file
+        multiple: true
       - id: date_of_birth
         type: date
         multiple: true
       - id: email
         type: email
         multiple: true
-      - id: commentated_files
-        type: comment
+      - id: commentated_file
+        type: component
         multiple: true
         components:
-          - id: attatched_file
+          - id: filename
             type: file
+            multiple: true
+          - id: comment
+            type: comment
+            multiple: true
 
 
   - id: social
     name: Social Media
     fields:
       - id: linkedin
-        type: url
+        type: component
         multiple: true
         components:
           - id: url
