all data for fields and components handled and rendered properly

--- a/data_config.yaml
+++ b/data_config.yaml
@@ -1,4 +1,10 @@
 sections:
+  - id: Profile Picture Section
+    name: profilepicname
+    fields:
+      - id: profilepicturefile
+        type: file
+
   - id: core
     name: Personal Information
     fields:
