all data handled and rendered properly when editing a file and uploading to an existing file slot all data deletes

--- a/data_config.yaml
+++ b/data_config.yaml
@@ -2,7 +2,7 @@ sections:
   - id: Profile Picture Section
     name: Profile Picture
     fields:
-      - id: The Profile Picture File
+      - id: profilepicturefile
         type: file
 
   - id: core
