--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,29 +1,59 @@
-# docker-compose.yml
-
-version: "3.8"
 
 services:
-  bassetdb:
-    image: postgres:15
-    container_name: my_postgres
-    restart: always
-    environment:
-      POSTGRES_USER: myuser
-      POSTGRES_PASSWORD: mypass
-      POSTGRES_DB: mydatabase
+  
+  neo4j:
+    image: neo4j:5.13.0
+    container_name: neo4j_osint_db
+    restart: unless-stopped
     ports:
-      - "5432:5432"  # This makes it accessible at localhost:5432
+      - "7474:7474"  # HTTP for Neo4j Browser
+      - "7687:7687"  # Bolt for applications
     volumes:
-      - ./project-name-files/pgdata:/var/lib/postgresql/data
-
-  web:
-    build: ./app
-    container_name: flask_app
-    depends_on:
-      - bassetdb
+      - neo4j_data:/data
+      - neo4j_logs:/logs
+      - neo4j_import:/var/lib/neo4j/import
+      - neo4j_plugins:/plugins
     environment:
-      - DATABASE_URL=postgresql://myuser:mypass@bassetdb:5432/mydatabase
+      - NEO4J_AUTH=neo4j/neo4jbasset
+      # Additional Neo4j configuration
+      - NEO4J_dbms_memory_pagecache_size=1G
+      - NEO4J_dbms_memory_heap_initial__size=1G
+      - NEO4J_dbms_memory_heap_max__size=2G
+      # Allow authentication from external sources
+      - NEO4J_dbms_connector_bolt_listen__address=0.0.0.0:7687
+      - NEO4J_dbms_connector_http_listen__address=0.0.0.0:7474
+    networks:
+      - app_network
+  
+  
+  basset_hound:
+    build:
+      context: .
+      dockerfile: Dockerfile
+    container_name: flask_osint_app
+    restart: unless-stopped
     ports:
       - "5000:5000"
     volumes:
-      - ./project-name-files/uploads:/app/uploads
+      - ./projects:/app/projects
+      - ./static:/app/static
+    depends_on:
+      - neo4j
+    environment:
+      - NEO4J_URI=bolt://neo4j:7687
+      - NEO4J_USER=neo4j
+      - NEO4J_PASSWORD=neo4jbasset
+      - FLASK_ENV=development
+      - FLASK_DEBUG=1
+    networks:
+      - app_network
+
+volumes:
+  neo4j_data:
+  neo4j_logs:
+  neo4j_import:
+  neo4j_plugins:
+
+networks:
+  app_network:
+    driver: bridge
