--- a/data_config.yaml
+++ b/data_config.yaml
@@ -41,7 +41,6 @@ sections:
             type: comment
             multiple: true
 
-
   - id: social
     name: Social Media
     fields:
@@ -71,4 +70,12 @@ sections:
             multiple: true
       - id: social files
         type: file
+        multiple: true
+
+
+  - id: devices
+    name: Devices
+    fields:
+      - id: ip address
+        type: ip_address
         multiple: true
