--- a/.env
+++ b/.env
@@ -1,3 +1,45 @@
+# Basset Hound Development Environment Configuration
+# Copy this to .env and modify as needed
+
+# =============================================================================
+# Neo4j Database
+# =============================================================================
 NEO4J_URI=bolt://localhost:7687
 NEO4J_USER=neo4j
 NEO4J_PASSWORD=neo4jbasset
+
+# =============================================================================
+# Application Settings
+# =============================================================================
+DEBUG=true
+HOST=0.0.0.0
+PORT=8000
+
+# =============================================================================
+# Authentication (disabled for development)
+# =============================================================================
+# Set to "true" to enable authentication in production
+AUTH_ENABLED=false
+
+# JWT secret key (change in production!)
+SECRET_KEY=development-secret-key-change-in-production
+
+# =============================================================================
+# Data Configuration
+# =============================================================================
+# Use enhanced config with 50+ social networks
+DATA_CONFIG_PATH=data_config_enhanced.yaml
+
+# =============================================================================
+# File Storage
+# =============================================================================
+PROJECTS_DIRECTORY=projects
+MAX_UPLOAD_SIZE_MB=100
+
+# =============================================================================
+# CORS Settings (permissive for development)
+# =============================================================================
+CORS_ORIGINS=*
+CORS_ALLOW_CREDENTIALS=true
+CORS_ALLOW_METHODS=*
+CORS_ALLOW_HEADERS=*
