--- a/requirements.txt
+++ b/requirements.txt
@@ -27,6 +27,10 @@ mcp>=1.0.0
 aiofiles>=24.1.0
 python-magic>=0.4.27
 
+# Report generation
+markdown>=3.0.0
+# weasyprint>=60.0  # Optional: for PDF generation (requires system dependencies)
+
 # HTTP client (for MCP and external APIs)
 httpx>=0.27.0
 
@@ -39,3 +43,4 @@ httpx>=0.27.0
 # Development
 ruff>=0.8.0
 mypy>=1.13.0
+rapidfuzz>=3.0.0
