--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -5,7 +5,7 @@
 # git clean -xdf -e venv/
 
 services:
-  
+
   neo4j:
     image: neo4j:5.13.0
     container_name: neo4j_osint_db
@@ -29,8 +29,30 @@ services:
       - NEO4J_dbms_connector_http_listen__address=0.0.0.0:7474
     networks:
       - basset_network
-  
-  
+    healthcheck:
+      test: ["CMD", "wget", "-q", "--spider", "http://localhost:7474"]
+      interval: 30s
+      timeout: 10s
+      retries: 5
+      start_period: 30s
+
+  redis:
+    image: redis:7-alpine
+    container_name: basset_redis
+    restart: unless-stopped
+    ports:
+      - "6379:6379"
+    volumes:
+      - redis_data:/data
+    command: redis-server --appendonly yes
+    networks:
+      - basset_network
+    healthcheck:
+      test: ["CMD", "redis-cli", "ping"]
+      interval: 10s
+      timeout: 5s
+      retries: 5
+
   basset_hound:
     build:
       context: .
@@ -43,13 +65,60 @@ services:
       - ./projects:/app/projects
       - ./static:/app/static
     depends_on:
-      - neo4j
+      neo4j:
+        condition: service_healthy
+      redis:
+        condition: service_healthy
     environment:
       - NEO4J_URI=bolt://neo4j:7687
       - NEO4J_USER=neo4j
       - NEO4J_PASSWORD=neo4jbasset
       - FLASK_ENV=development
       - FLASK_DEBUG=1
+      - REDIS_URL=redis://redis:6379/1
+      - CELERY_BROKER_URL=redis://redis:6379/0
+      - CELERY_RESULT_BACKEND=redis://redis:6379/0
+    networks:
+      - basset_network
+
+  celery_worker:
+    build:
+      context: .
+      dockerfile: Dockerfile
+    container_name: basset_celery_worker
+    restart: unless-stopped
+    command: celery -A api.tasks worker --loglevel=info --concurrency=4
+    volumes:
+      - ./projects:/app/projects
+      - ./static:/app/static
+    depends_on:
+      redis:
+        condition: service_healthy
+      neo4j:
+        condition: service_healthy
+    environment:
+      - NEO4J_URI=bolt://neo4j:7687
+      - NEO4J_USER=neo4j
+      - NEO4J_PASSWORD=neo4jbasset
+      - REDIS_URL=redis://redis:6379/1
+      - CELERY_BROKER_URL=redis://redis:6379/0
+      - CELERY_RESULT_BACKEND=redis://redis:6379/0
+    networks:
+      - basset_network
+
+  celery_beat:
+    build:
+      context: .
+      dockerfile: Dockerfile
+    container_name: basset_celery_beat
+    restart: unless-stopped
+    command: celery -A api.tasks beat --loglevel=info
+    depends_on:
+      - redis
+      - celery_worker
+    environment:
+      - CELERY_BROKER_URL=redis://redis:6379/0
+      - CELERY_RESULT_BACKEND=redis://redis:6379/0
     networks:
       - basset_network
 
@@ -58,6 +127,7 @@ volumes:
   neo4j_logs:
   neo4j_import:
   neo4j_plugins:
+  redis_data:
 
 networks:
   basset_network:
