--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,13 +1,14 @@
+# Basset Hound OSINT Platform - Docker Compose Configuration
 # docker compose up --build
 # docker compose down -v
 # docker compose down --volumes --remove-orphans
-# git clean -xdn -e venv/
-# git clean -xdf -e venv/
 
 services:
 
   neo4j:
-    image: neo4j:5.13.0
+    # Using Neo4j Community Edition with GDS plugin (free for development)
+    # For enterprise features, change to neo4j:5.28.0-enterprise
+    image: neo4j:5.28.0
     container_name: neo4j_osint_db
     restart: unless-stopped
     ports:
@@ -19,14 +20,22 @@ services:
       - neo4j_import:/var/lib/neo4j/import
       - neo4j_plugins:/plugins
     environment:
+      # Authentication
       - NEO4J_AUTH=neo4j/neo4jbasset
-      # Additional Neo4j configuration
-      - NEO4J_dbms_memory_pagecache_size=1G
-      - NEO4J_dbms_memory_heap_initial__size=1G
-      - NEO4J_dbms_memory_heap_max__size=2G
-      # Allow authentication from external sources
-      - NEO4J_dbms_connector_bolt_listen__address=0.0.0.0:7687
-      - NEO4J_dbms_connector_http_listen__address=0.0.0.0:7474
+      # Enable GDS Plugin (auto-downloads on startup)
+      - NEO4J_PLUGINS=["graph-data-science"]
+      # Memory Configuration
+      - NEO4J_server_memory_pagecache_size=1G
+      - NEO4J_server_memory_heap_initial__size=1G
+      - NEO4J_server_memory_heap_max__size=2G
+      # Network Configuration
+      - NEO4J_server_bolt_listen__address=0.0.0.0:7687
+      - NEO4J_server_bolt_advertised__address=:7687
+      - NEO4J_server_http_listen__address=0.0.0.0:7474
+      - NEO4J_server_http_advertised__address=:7474
+      # Procedure allowlist for GDS
+      - NEO4J_dbms_security_procedures_unrestricted=gds.*,apoc.*
+      - NEO4J_dbms_security_procedures_allowlist=gds.*,apoc.*
     networks:
       - basset_network
     healthcheck:
@@ -34,7 +43,7 @@ services:
       interval: 30s
       timeout: 10s
       retries: 5
-      start_period: 30s
+      start_period: 60s
 
   redis:
     image: redis:7-alpine
@@ -44,7 +53,7 @@ services:
       - "6379:6379"
     volumes:
       - redis_data:/data
-    command: redis-server --appendonly yes
+    command: redis-server --appendonly yes --maxmemory 256mb --maxmemory-policy allkeys-lru
     networks:
       - basset_network
     healthcheck:
@@ -53,14 +62,14 @@ services:
       timeout: 5s
       retries: 5
 
-  basset_hound:
+  basset_api:
     build:
       context: .
       dockerfile: Dockerfile
-    container_name: flask_osint_app
+    container_name: basset_api
     restart: unless-stopped
     ports:
-      - "5000:5000"
+      - "8000:8000"
     volumes:
       - ./projects:/app/projects
       - ./static:/app/static
@@ -70,16 +79,28 @@ services:
       redis:
         condition: service_healthy
     environment:
+      # Neo4j Connection
       - NEO4J_URI=bolt://neo4j:7687
       - NEO4J_USER=neo4j
       - NEO4J_PASSWORD=neo4jbasset
-      - FLASK_ENV=development
-      - FLASK_DEBUG=1
+      # FastAPI Configuration
+      - FASTAPI_ENV=development
+      - DEBUG=1
+      - HOST=0.0.0.0
+      - PORT=8000
+      # Redis Configuration
       - REDIS_URL=redis://redis:6379/1
+      # Celery Configuration
       - CELERY_BROKER_URL=redis://redis:6379/0
       - CELERY_RESULT_BACKEND=redis://redis:6379/0
     networks:
       - basset_network
+    healthcheck:
+      test: ["CMD", "curl", "-f", "http://localhost:8000/health"]
+      interval: 30s
+      timeout: 10s
+      retries: 3
+      start_period: 30s
 
   celery_worker:
     build:
@@ -97,10 +118,13 @@ services:
       neo4j:
         condition: service_healthy
     environment:
+      # Neo4j Connection
       - NEO4J_URI=bolt://neo4j:7687
       - NEO4J_USER=neo4j
       - NEO4J_PASSWORD=neo4jbasset
+      # Redis Configuration
       - REDIS_URL=redis://redis:6379/1
+      # Celery Configuration
       - CELERY_BROKER_URL=redis://redis:6379/0
       - CELERY_RESULT_BACKEND=redis://redis:6379/0
     networks:
@@ -113,10 +137,17 @@ services:
     container_name: basset_celery_beat
     restart: unless-stopped
     command: celery -A api.tasks beat --loglevel=info
+    volumes:
+      - ./projects:/app/projects
     depends_on:
       - redis
       - celery_worker
     environment:
+      # Neo4j Connection
+      - NEO4J_URI=bolt://neo4j:7687
+      - NEO4J_USER=neo4j
+      - NEO4J_PASSWORD=neo4jbasset
+      # Celery Configuration
       - CELERY_BROKER_URL=redis://redis:6379/0
       - CELERY_RESULT_BACKEND=redis://redis:6379/0
     networks:
@@ -124,10 +155,15 @@ services:
 
 volumes:
   neo4j_data:
+    driver: local
   neo4j_logs:
+    driver: local
   neo4j_import:
+    driver: local
   neo4j_plugins:
+    driver: local
   redis_data:
+    driver: local
 
 networks:
   basset_network:
