--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -7,8 +7,8 @@ services:
 
   neo4j:
     # Using Neo4j Community Edition with GDS plugin (free for development)
-    # For enterprise features, change to neo4j:5.28.0-enterprise
-    image: neo4j:5.28.0
+    # For enterprise features, change to neo4j:5.26-enterprise
+    image: neo4j:5.26-community
     container_name: neo4j_osint_db
     restart: unless-stopped
     ports:
@@ -108,7 +108,7 @@ services:
       dockerfile: Dockerfile
     container_name: basset_celery_worker
     restart: unless-stopped
-    command: celery -A api.tasks worker --loglevel=info --concurrency=4
+    command: python -m celery -A api.tasks worker --loglevel=info --concurrency=4
     volumes:
       - ./projects:/app/projects
       - ./static:/app/static
@@ -136,7 +136,7 @@ services:
       dockerfile: Dockerfile
     container_name: basset_celery_beat
     restart: unless-stopped
-    command: celery -A api.tasks beat --loglevel=info
+    command: python -m celery -A api.tasks beat --loglevel=info
     volumes:
       - ./projects:/app/projects
     depends_on:
