--- a/requirements.txt
+++ b/requirements.txt
@@ -20,6 +20,10 @@ email-validator>=2.1.0
 # Database
 neo4j==5.28.1
 
+# Task Queue
+celery[redis]>=5.3.0
+redis>=5.0.0
+
 # Authentication
 python-jose[cryptography]>=3.3.0
 passlib[bcrypt]>=1.7.4
