--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,19 +1,56 @@
 # Basset Hound OSINT Platform - Docker Compose Configuration
-# docker compose up --build
-# docker compose down -v
-# docker compose down --volumes --remove-orphans
+#
+# USAGE:
+#   docker compose up --build       # Start all services
+#   docker compose down -v          # Stop and remove volumes
+#   docker compose logs -f nginx    # Follow nginx logs
+#
+# SINGLE PORT ENTRY:
+#   All services are accessible through nginx on port 8080:
+#   - http://localhost:8080/         -> Basset Hound UI & API
+#   - http://localhost:8080/docs     -> API Documentation
+#   - http://localhost:8080/neo4j/   -> Neo4j Browser (admin)
+#
+# DIRECT ACCESS (for debugging, use docker-compose.dev.yml):
+#   docker compose -f docker-compose.yml -f docker-compose.dev.yml up
 
 services:
 
+  # ==========================================================================
+  # NGINX - Single Entry Point (Port 8080)
+  # ==========================================================================
+  nginx:
+    image: nginx:alpine
+    container_name: basset_nginx
+    restart: unless-stopped
+    ports:
+      - "8080:8080"
+    volumes:
+      - ./nginx/nginx.conf:/etc/nginx/nginx.conf:ro
+      - nginx_logs:/var/log/nginx
+    depends_on:
+      basset_api:
+        condition: service_healthy
+    networks:
+      - basset-hound
+    healthcheck:
+      test: ["CMD", "wget", "-q", "--spider", "http://localhost:8080/nginx-health"]
+      interval: 30s
+      timeout: 10s
+      retries: 3
+      start_period: 10s
+
+  # ==========================================================================
+  # NEO4J - Graph Database (Internal Only)
+  # ==========================================================================
   neo4j:
     # Using Neo4j Community Edition with GDS plugin (free for development)
     # For enterprise features, change to neo4j:5.26-enterprise
     image: neo4j:5.26-community
     container_name: neo4j_osint_db
     restart: unless-stopped
-    ports:
-      - "7475:7474"  # HTTP for Neo4j Browser (mapped to 7475 to avoid conflict)
-      - "7688:7687"  # Bolt for applications (mapped to 7688 to avoid conflict)
+    # No external ports - accessible only via nginx at /neo4j/
+    # For direct access, use docker-compose.dev.yml
     volumes:
       - neo4j_data:/data
       - neo4j_logs:/logs
@@ -37,7 +74,7 @@ services:
       - NEO4J_dbms_security_procedures_unrestricted=gds.*,apoc.*
       - NEO4J_dbms_security_procedures_allowlist=gds.*,apoc.*
     networks:
-      - basset_network
+      - basset-hound
     healthcheck:
       test: ["CMD", "wget", "-q", "--spider", "http://localhost:7474"]
       interval: 30s
@@ -45,31 +82,35 @@ services:
       retries: 5
       start_period: 60s
 
+  # ==========================================================================
+  # REDIS - Cache & Message Broker (Internal Only)
+  # ==========================================================================
   redis:
     image: redis:7-alpine
     container_name: basset_redis
     restart: unless-stopped
-    ports:
-      - "6379:6379"
+    # No external ports - internal only
     volumes:
       - redis_data:/data
     command: redis-server --appendonly yes --maxmemory 256mb --maxmemory-policy allkeys-lru
     networks:
-      - basset_network
+      - basset-hound
     healthcheck:
       test: ["CMD", "redis-cli", "ping"]
       interval: 10s
       timeout: 5s
       retries: 5
 
+  # ==========================================================================
+  # BASSET API - FastAPI Application (Internal Only)
+  # ==========================================================================
   basset_api:
     build:
       context: .
       dockerfile: Dockerfile
     container_name: basset_api
     restart: unless-stopped
-    ports:
-      - "8000:8000"
+    # No external ports - accessible only via nginx
     volumes:
       - ./projects:/app/projects
       - ./static:/app/static
@@ -79,7 +120,7 @@ services:
       redis:
         condition: service_healthy
     environment:
-      # Neo4j Connection
+      # Neo4j Connection (internal network)
       - NEO4J_URI=bolt://neo4j:7687
       - NEO4J_USER=neo4j
       - NEO4J_PASSWORD=neo4jbasset
@@ -88,13 +129,13 @@ services:
       - DEBUG=1
       - HOST=0.0.0.0
       - PORT=8000
-      # Redis Configuration
+      # Redis Configuration (internal network)
       - REDIS_URL=redis://redis:6379/1
-      # Celery Configuration
+      # Celery Configuration (internal network)
       - CELERY_BROKER_URL=redis://redis:6379/0
       - CELERY_RESULT_BACKEND=redis://redis:6379/0
     networks:
-      - basset_network
+      - basset-hound
     healthcheck:
       test: ["CMD", "curl", "-f", "http://localhost:8000/health"]
       interval: 30s
@@ -102,6 +143,9 @@ services:
       retries: 3
       start_period: 30s
 
+  # ==========================================================================
+  # CELERY WORKER - Background Task Processing (Internal Only)
+  # ==========================================================================
   celery_worker:
     build:
       context: .
@@ -128,8 +172,11 @@ services:
       - CELERY_BROKER_URL=redis://redis:6379/0
       - CELERY_RESULT_BACKEND=redis://redis:6379/0
     networks:
-      - basset_network
+      - basset-hound
 
+  # ==========================================================================
+  # CELERY BEAT - Scheduled Task Scheduler (Internal Only)
+  # ==========================================================================
   celery_beat:
     build:
       context: .
@@ -151,8 +198,11 @@ services:
       - CELERY_BROKER_URL=redis://redis:6379/0
       - CELERY_RESULT_BACKEND=redis://redis:6379/0
     networks:
-      - basset_network
+      - basset-hound
 
+# =============================================================================
+# VOLUMES
+# =============================================================================
 volumes:
   neo4j_data:
     driver: local
@@ -164,7 +214,13 @@ volumes:
     driver: local
   redis_data:
     driver: local
+  nginx_logs:
+    driver: local
 
+# =============================================================================
+# NETWORKS
+# =============================================================================
 networks:
-  basset_network:
+  basset-hound:
     driver: bridge
+    name: basset-hound
